--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
+
+* {
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --font-roboto: "Roboto Slab", serif;
+  --font-raleway: "Raleway", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: var(--font-roboto);
+  background-color: #212426;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-input {
+  width: 70%;
+  padding: 20px 25px;
+  border-radius: 3rem;
+  background: #1f2123;
+  box-shadow: 5px 5px 7px #1c1d1f;
+  margin: 4%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.header-input input {
+  flex: 1;
+  font-size: 24px;
+  color: grey;
+  outline: none;
+  background: #1f2123;
+}
+.header-input img {
+  width: 5%;
+  border-radius: 50%;
+  cursor: pointer;
+}
+@media screen and (max-width:767px){
+  .header-input input
+  {
+    font-size: 15px;
+  }
+  .movie-header h1
+  {
+    font-size: 30px !important;
+  }
+}
+.movie-header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 5%;
+}
+.movie-header h1 {
+  font-size: 45px;
+  letter-spacing: 0.9px;
+  animation: mymove 1s infinite;
+ }
+ @keyframes mymove
+ {
+     from{color: red;}
+     to{color: yellow;}
+   }
+
+.no-field {
+  width: 100%;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.no-field h2 {
+  font-size: 25px;
+  color: #f9d3b4;
+}
+.container {
+  width: 100%;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.movie_card {
+  border-radius: 20px;
+  overflow: hidden;
+  width: 300px;
+  height: 400px;
+  margin: 20px;
+  border: none;
+}
+.movie_card p{
+  font-size: 30px;
+  font-weight: 700;
+}
+.movie_card:hover {
+  transform: scale(1.07);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
