--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .no-field h2 {
   font-size: 25px;
